# learn-cs224r

./: .gitignore  README.md  main.py  pyproject.toml
homework1/: README.md  pyproject.toml  requirements-fix.txt  requirements.txt
homework1/cs224r/: data_view.ipynb
homework1/cs224r/infrastructure/: bc_trainer.py  pytorch_util.py  replay_buffer.py  utils.py
homework1/cs224r/policies/: MLP_policy.py
homework2/hw2/ac/: .gitignore  ac.py  conda_env.yml  readme.md  setup.sh  shape.ipynb  utils.py
homework2/hw2/mujoco_mpc/: README.md
homework2/hw2/mujoco_mpc/mjpc/: CMakeLists.txt
homework3/: README.md  hw3.ipynb  requirements.txt
homework3/cs224r/agents/: iql_agent.py
homework3/cs224r/critics/: cql_critic.py  iql_critic.py
homework4/goal_conditioned_rl/: README.md  gcrl_shape.ipynb  pyproject.toml  requirements.txt  requirements_mac.txt  run_episode.py  trainer.py
homework4/meta_rl/: README.md  meta_rl_shape.ipynb  requirements_mac.txt
homework4/meta_rl/embed/: encoder_decoder.py
homework4/meta_rl/scripts/: dream.py  rl2.py
