[project]
name = "learn-cs244r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "box2d-py==2.3.8",
    "gym==0.25.2",
    "ipdb==0.13.13",
    "ipykernel>=7.2.0",
    "ipython==9.0.2",
    "matplotlib==3.10.1",
    "moviepy==1.0.3",
    "mujoco==2.3.3",
    "opencv-python==4.11.0.86",
    "pyvirtualdisplay==3.0",
    "swig==4.3.0",
    "tensorboard==2.19.0",
    "tensorboardx==2.6.2.2",
    "torch>=2.10.0",
]
