[project]
name = "goal-conditioned-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.2.2",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cloudpickle==1.2.2",
    "cython==0.29.37",
    "decorator==5.2.1",
    "fasteners==0.19",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "future==1.0.0",
    "glfw==2.9.0",
    "google-auth==2.40.1",
    "google-auth-oauthlib==1.2.2",
    "grpcio==1.71.0",
    "gym==0.15.4",
    "gym-notices==0.0.8",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "jinja2==3.1.6",
    "markdown==3.8",
    "markupsafe==3.0.2",
    "moviepy==2.1.2",
    "mpmath==1.3.0",
    "mujoco-py==2.1.2.14",
    "multiworld",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "oauthlib==3.2.2",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "patchelf==0.17.2.2",
    "pillow==10.4.0",
    "proglog==0.1.11",
    "protobuf==6.30.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pygame==2.6.1",
    "pyglet==1.3.2",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "scipy==1.15.2",
    "six==1.17.0",
    "sympy==1.14.0",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorboard-plugin-wit==1.8.1",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
]

[tool.uv.sources]
multiworld = { git = "https://github.com/vitchyr/multiworld.git", rev = "12a05bfa4139f90741608ba409edebb95d7ef9ab" }
